REDO-850: prevent text from overlapping accordion

--- a/source/css/scss/app/pages/loan.scss
+++ b/source/css/scss/app/pages/loan.scss
@@ -35,6 +35,9 @@
 
 .about-zip {
 	position: relative;
+	.ac-title-text {
+		margin-right: 26px;
+	}
 	.ac-body {
 		margin-top: 2rem;
 	}
